# GenericIOTStack

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/client/inc/: client.hpp  clientMain.hpp  communicationHandler.hpp  objectIf.hpp  objectManager.hpp  signalDispatcher.hpp  stackClient.hpp
src/client/src/: client.cpp  clientMain.cpp  communicationHandler.cpp  objectManager.cpp  signalDispatcher.cpp  stackClient.cpp
src/common/inc/: communicationIf.hpp  genericIoTStackPrivate.hpp  objectDefinition.hpp  signalDefinition.hpp
src/common/src/: genericIoTStack.cpp
src/interface/: applicationObjectIf.hpp  clientInterface.hpp  communicationIf.hpp  genericIoTStack.hpp  objectDefinition.hpp
test/: BlockTests.cpp  CMakeLists.txt  test.cpp
test/mocks/: applicationObjectIfMock.hpp  communicationIfMock.hpp
